--- a/ProyectoGrado/web/horas/crear.xhtml
+++ b/ProyectoGrado/web/horas/crear.xhtml
@@ -12,14 +12,14 @@
                 <p:panel>
                     <p:breadCrumb>
                         <p:menuitem value="Inicio" url="/faces/index.xhtml"></p:menuitem>
-                        <p:menuitem value="Creacion de Bodegas" url="#"></p:menuitem>
+                        <p:menuitem value="Creacion de Horas" url="#"></p:menuitem>
                     </p:breadCrumb>
                 </p:panel>  
                 <p:growl id="mensajes" sticky="true" showDetail="true"/>                
                 <br/>
                 <p:panelGrid columns="2">                    
-                    <p:outputLabel value="Hora:  " for="nombre" />
-                    <p:inputText id="nombre" required="true" value="#{horasController.campo.hora}"/> 
+                    <p:outputLabel value="Hora:  " for="hora" />
+                    <p:inputText id="hora" required="true" value="#{horasController.campo.hora}"/> 
                     
                     <f:facet name="footer">
                         <p:commandButton id="btngrabar" value="Guardar" ajax="false" action="#{horasController.agregar()}"/>
