Ya funciona el registro de Docentes

--- a/ProyectoGrado/web/index.xhtml
+++ b/ProyectoGrado/web/index.xhtml
@@ -13,18 +13,21 @@
                         <f:facet name="header">                            
                             <p:row>
                                 <p:column>Tipo Modalidad</p:column>  
-                                <p:column>Horas</p:column>  
+                                <p:column>Horas</p:column> 
+                                <p:column>Docentes</p:column> 
                             </p:row>
                         </f:facet>
                         
                         <p:row>                            
                             <p:column><h:link value="Crear Tipo de Modalidad" outcome="tipo_modalidad/crear"></h:link></p:column>
                             <p:column><h:link value="Crear Hora" outcome="horas/crear"></h:link></p:column>
+                            <p:column><h:link value="Crear Docente" outcome="docentes/crear"></h:link></p:column>
                         </p:row>
                         
                         <p:row>
                             <p:column><h:link value="Administrar Tipo de Modalidad" outcome="tipo_modalidad/administrar"></h:link></p:column> 
-                            <p:column><h:link value="Administrar Horas" outcome="horas/administrar"></h:link></p:column>                                                       
+                            <p:column><h:link value="Administrar Horas" outcome="horas/administrar"></h:link></p:column> 
+                            <p:column><h:link value="Administrar Docentes" outcome="docentes/administrar"></h:link></p:column>  
                         </p:row>
                     </p:panelGrid>
                 </p:panel>
