Modulo de Activiades funcionando completa

--- a/ProyectoGrado/web/index.xhtml
+++ b/ProyectoGrado/web/index.xhtml
@@ -22,12 +22,14 @@
                             <p:column><h:link value="Crear Tipo de Modalidad" outcome="tipo_modalidad/crear"></h:link></p:column>
                             <p:column><h:link value="Crear Hora" outcome="horas/crear"></h:link></p:column>
                             <p:column><h:link value="Crear Docente" outcome="docentes/crear"></h:link></p:column>
+                            <p:column><h:link value="Crear Actividad" outcome="actividades/crear"></h:link></p:column>
                         </p:row>
                         
                         <p:row>
                             <p:column><h:link value="Administrar Tipo de Modalidad" outcome="tipo_modalidad/administrar"></h:link></p:column> 
                             <p:column><h:link value="Administrar Horas" outcome="horas/administrar"></h:link></p:column> 
                             <p:column><h:link value="Administrar Docentes" outcome="docentes/administrar"></h:link></p:column>  
+                            <p:column><h:link value="Administrar Actividades" outcome="actividades/administrar"></h:link></p:column>  
                         </p:row>
                     </p:panelGrid>
                 </p:panel>
