--- a/ProyectoGrado/web/evaluaciones/actualizar.xhtml
+++ b/ProyectoGrado/web/evaluaciones/actualizar.xhtml
@@ -11,6 +11,8 @@
                 <p:panel>
                     <p:breadCrumb>
                         <p:menuitem value="Inicio" url="/faces/index.xhtml"></p:menuitem>
+                        <p:menuitem value="Bienvenido #{loginController.usuario}" url="/faces/indexEvaluador.xhtml"></p:menuitem> 
+                        <p:menuitem value="Administracion de Evaluaciones" url="/faces/evaluaciones/administrar.xhtml"></p:menuitem>  
                         <p:menuitem value="Actualizacion de Evaluaciones" url="#"></p:menuitem>
                     </p:breadCrumb>
                 </p:panel>  
