--- a/ProyectoGrado/web/fechas_seguimientos/crear.xhtml
+++ b/ProyectoGrado/web/fechas_seguimientos/crear.xhtml
@@ -12,6 +12,7 @@
                 <p:panel>
                     <p:breadCrumb>
                         <p:menuitem value="Inicio" url="/faces/index.xhtml"></p:menuitem>
+                        <p:menuitem value="Bienvenido #{loginController.usuario}" url="/faces/indexEvaluador.xhtml"></p:menuitem>
                         <p:menuitem value="Creacion de Fechas de Seguimiento" url="#"></p:menuitem>
                     </p:breadCrumb>
                 </p:panel>  
