--- a/ProyectoGrado/web/fechas_seguimientos/actualizar.xhtml
+++ b/ProyectoGrado/web/fechas_seguimientos/actualizar.xhtml
@@ -12,6 +12,8 @@
                 <p:panel>
                     <p:breadCrumb>
                         <p:menuitem value="Inicio" url="/faces/index.xhtml"></p:menuitem>
+                        <p:menuitem value="Bienvenido #{loginController.usuario}" url="/faces/indexEvaluador.xhtml"></p:menuitem> 
+                        <p:menuitem value="Administracion de Fechas de Seguimiento" url="/faces/fechas_seguimientos/administrar.xhtml"></p:menuitem>  
                         <p:menuitem value="Actualizacion de Fechas de Seguimiento" url="#"></p:menuitem>
                     </p:breadCrumb>
                 </p:panel>  
