--- a/ProyectoGrado/web/horas/actualizar.xhtml
+++ b/ProyectoGrado/web/horas/actualizar.xhtml
@@ -12,7 +12,9 @@
                 <p:panel>
                     <p:breadCrumb>
                         <p:menuitem value="Inicio" url="/faces/index.xhtml"></p:menuitem>
-                        <p:menuitem value="Creacion de Horas" url="#"></p:menuitem>
+                        <p:menuitem value="Bienvenido #{loginController.usuario}" url="/faces/indexAdmin.xhtml"></p:menuitem>
+                        <p:menuitem value="Administracion de Horas" url="/faces/horas/administrar.xhtml"></p:menuitem> 
+                        <p:menuitem value="Actualizacion de Horas" url="#"></p:menuitem>
                     </p:breadCrumb>
                 </p:panel>  
                 <p:growl id="mensajes" sticky="true" showDetail="true"/>                
@@ -22,7 +24,7 @@
                     <p:inputText id="hora" required="true" value="#{horasController.campo.hora}"/> 
                     
                     <f:facet name="footer">
-                        <p:commandButton id="btngrabar" value="Guardar" ajax="false" action="#{horasController.actualizar()}"/>
+                        <p:commandButton id="btngrabar" value="Actualizar" ajax="false" action="#{horasController.actualizar()}"/>
                     </f:facet>
                 </p:panelGrid>
             </h:form>
