--- a/ProyectoGrado/web/jornadas/actualizar.xhtml
+++ b/ProyectoGrado/web/jornadas/actualizar.xhtml
@@ -12,6 +12,8 @@
                 <p:panel>
                     <p:breadCrumb>
                         <p:menuitem value="Inicio" url="/faces/index.xhtml"></p:menuitem>
+                        <p:menuitem value="Bienvenido #{loginController.usuario}" url="/faces/indexAdmin.xhtml"></p:menuitem>
+                        <p:menuitem value="Administracion de Jornadas" url="/faces/jornadas/administrar.xhtml"></p:menuitem> 
                         <p:menuitem value="Actualizacion de Jornadas" url="#"></p:menuitem>
                     </p:breadCrumb>
                 </p:panel>  
