--- a/ProyectoGrado/web/productos/actualizar.xhtml
+++ b/ProyectoGrado/web/productos/actualizar.xhtml
@@ -11,7 +11,9 @@
                 <p:panel>
                     <p:breadCrumb>
                         <p:menuitem value="Inicio" url="/faces/index.xhtml"></p:menuitem>
-                        <p:menuitem value="Creacion de Docentes" url="#"></p:menuitem>
+                        <p:menuitem value="Bienvenido #{loginController.usuario}" url="/faces/indexDocentes.xhtml"></p:menuitem>
+                        <p:menuitem value="Administracion de Productos" url="/faces/productos/administrar.xhtml"></p:menuitem>
+                        <p:menuitem value="Actualizacion de Productos" url="#"></p:menuitem>
                     </p:breadCrumb>
                 </p:panel>  
                 <p:growl id="mensajes" sticky="true" showDetail="true"/>                
@@ -35,7 +37,7 @@
                     </p:selectOneMenu>
                     
                     <f:facet name="footer">
-                        <p:commandButton id="btngrabar" value="Guardar" ajax="false" action="#{productosController.actualizar()}"/>
+                        <p:commandButton id="btngrabar" value="Actualizar" ajax="false" action="#{productosController.actualizar()}"/>
                     </f:facet>
                 </p:panelGrid>
             </h:form>
