usuario docente listo con permisos

--- a/ProyectoGrado/web/docentes/actualizar.xhtml
+++ b/ProyectoGrado/web/docentes/actualizar.xhtml
@@ -11,7 +11,7 @@
                 <p:panel>
                     <p:breadCrumb>
                         <p:menuitem value="Inicio" url="/faces/index.xhtml"></p:menuitem>
-                        <p:menuitem value="Bienvenido #{loginController.usuario}" url="/faces/indexDocentes.xhtml"></p:menuitem>
+                        <p:menuitem value="Bienvenido #{loginController.usuario}" url="/faces/indexAdmin.xhtml"></p:menuitem>
                         <p:menuitem value="Administracion de Docentes" url="/faces/docentes/administrar.xhtml"></p:menuitem>
                         <p:menuitem value="Actualizacion de Docentes" url="#"></p:menuitem>
                     </p:breadCrumb>
