--- a/ProyectoGrado/web/productos/actualizar.xhtml
+++ b/ProyectoGrado/web/productos/actualizar.xhtml
@@ -11,7 +11,7 @@
                 <p:panel>
                     <p:breadCrumb>
                         <p:menuitem value="Inicio" url="/faces/index.xhtml"></p:menuitem>
-                        <p:menuitem value="Bienvenido #{loginController.usuario}" url="/faces/indexDocentes.xhtml"></p:menuitem>
+                        <p:menuitem value="Bienvenido #{loginController.buscarDocente()}" url="/faces/indexDocentes.xhtml"></p:menuitem>
                         <p:menuitem value="Administracion de Productos" url="/faces/productos/administrar.xhtml"></p:menuitem>
                         <p:menuitem value="Actualizacion de Productos" url="#"></p:menuitem>
                     </p:breadCrumb>
