--- a/ProyectoGrado/web/productos/crear.xhtml
+++ b/ProyectoGrado/web/productos/crear.xhtml
@@ -12,7 +12,7 @@
                 <p:panel>
                     <p:breadCrumb>
                         <p:menuitem value="Inicio" url="/faces/index.xhtml"></p:menuitem>
-                        <p:menuitem value="Bienvenido #{loginController.usuario}" url="/faces/indexDocentes.xhtml"></p:menuitem>
+                        <p:menuitem value="Bienvenido #{loginController.buscarDocente()}" url="/faces/indexDocentes.xhtml"></p:menuitem>
                         <p:menuitem value="Creacion de Productos" url="#"></p:menuitem>
                     </p:breadCrumb>
                 </p:panel>  
