--- a/ProyectoGrado/web/horas/administrar.xhtml
+++ b/ProyectoGrado/web/horas/administrar.xhtml
@@ -10,8 +10,8 @@
             <h:form>
                 <p:panel>
                     <p:breadCrumb>
-                        <p:menuitem value="Inicio" url="/faces/index.xhtml"></p:menuitem> 
-                        <p:menuitem value="Bienvenido #{loginController.usuario}" url="/faces/indexAdmin.xhtml"></p:menuitem> 
+                        <p:menuitem url="#"></p:menuitem>
+                        <p:menuitem value="Bienvenido #{loginController.usuario}" url="/faces/index_admin.xhtml"></p:menuitem> 
                         <p:menuitem value="Administracion de Horas" url="#"></p:menuitem>                     
                     </p:breadCrumb>
                     <br/>
