--- a/ProyectoGrado/web/index_admin.xhtml
+++ b/ProyectoGrado/web/index_admin.xhtml
@@ -10,7 +10,7 @@
             <h:form>
                 <p:panel>
                     <p:breadCrumb>
-                        <p:menuitem value="login" url="/faces/index.xhtml"></p:menuitem>
+                        <p:menuitem url="#"></p:menuitem>
                         <p:menuitem value="Bienvenido #{loginController.usuario}" url="#"></p:menuitem>
                     </p:breadCrumb>
                     <p:panelGrid>
@@ -19,8 +19,6 @@
                                 <p:column>Tipo Modalidad</p:column>  
                                 <p:column>Horas</p:column> 
                                 <p:column>Docentes</p:column> 
-                                <p:column>Jornadas</p:column>
-                                <p:column>Clases</p:column> 
                                 <p:column>Convenciones</p:column>
                             </p:row>
                         </f:facet>
@@ -29,17 +27,13 @@
                             <p:column><h:link value="Crear Tipo de Modalidad" outcome="tipo_modalidad/crear"></h:link></p:column>
                             <p:column><h:link value="Crear Hora" outcome="horas/crear"></h:link></p:column>
                             <p:column><h:link value="Crear Docente" outcome="docentes/crear"></h:link></p:column>
-                            <p:column><h:link value="Crear Jornada" outcome="jornadas/crear"></h:link></p:column>
-                            <p:column><h:link value="Crear Clase" outcome="clases/crear"></h:link></p:column>
                             <p:column><h:link value="Crear Convencion" outcome="convenciones/crear"></h:link></p:column>
                         </p:row>
                         
                         <p:row>
                             <p:column><h:link value="Administrar Tipo de Modalidad" outcome="tipo_modalidad/administrar"></h:link></p:column> 
                             <p:column><h:link value="Administrar Horas" outcome="horas/administrar"></h:link></p:column> 
-                            <p:column><h:link value="Administrar Docentes" outcome="docentes/administrar"></h:link></p:column>  
-                            <p:column><h:link value="Administrar Jornadas" outcome="jornadas/administrar"></h:link></p:column>  
-                            <p:column><h:link value="Administrar Clases" outcome="clases/administrar"></h:link></p:column>  
+                            <p:column><h:link value="Administrar Docentes" outcome="docentes/administrar"></h:link></p:column> 
                             <p:column><h:link value="Administrar Convenciones" outcome="convenciones/administrar"></h:link></p:column>  
                         </p:row>
                         
