--- a/ProyectoGrado/web/productos/administrar.xhtml
+++ b/ProyectoGrado/web/productos/administrar.xhtml
@@ -10,8 +10,8 @@
             <h:form>
                 <p:panel>
                     <p:breadCrumb>
-                        <p:menuitem value="Inicio" url="/faces/index.xhtml"></p:menuitem>  
-                        <p:menuitem value="Bienvenido #{loginController.buscarDocente()}" url="/faces/indexDocentes.xhtml"></p:menuitem> 
+                        <p:menuitem url="#"></p:menuitem>
+                        <p:menuitem value="Bienvenido #{loginController.buscarDocente()}" url="/faces/index_docentes.xhtml"></p:menuitem> 
                         <p:menuitem value="Administracion de Productos" url="#"></p:menuitem>                        
                     </p:breadCrumb>
                     <br/>
