--- a/ProyectoGrado/web/evaluaciones/administrar.xhtml
+++ b/ProyectoGrado/web/evaluaciones/administrar.xhtml
@@ -9,9 +9,9 @@
         <ui:define name="content">
             <h:form>
                 <p:panel>
-                    <p:breadCrumb>
-                        <p:menuitem value="Inicio" url="/faces/index.xhtml"></p:menuitem> 
-                        <p:menuitem value="Bienvenido #{loginController.usuario}" url="/faces/indexEvaluador.xhtml"></p:menuitem> 
+                    <p:breadCrumb> 
+                        <p:menuitem url="#"></p:menuitem>
+                        <p:menuitem value="Bienvenido #{loginController.usuario}" url="/faces/index_evaluador.xhtml"></p:menuitem> 
                         <p:menuitem value="Administracion de Evaluaciones" url="#"></p:menuitem>                       
                     </p:breadCrumb>
                     <br/>
