--- a/ProyectoGrado/web/horas/actualizar.xhtml
+++ b/ProyectoGrado/web/horas/actualizar.xhtml
@@ -11,8 +11,8 @@
             <h:form>
                 <p:panel>
                     <p:breadCrumb>
-                        <p:menuitem value="Inicio" url="/faces/index.xhtml"></p:menuitem>
-                        <p:menuitem value="Bienvenido #{loginController.usuario}" url="/faces/indexAdmin.xhtml"></p:menuitem>
+                        <p:menuitem url="#"></p:menuitem>
+                        <p:menuitem value="Bienvenido #{loginController.usuario}" url="/faces/index_admin.xhtml"></p:menuitem>
                         <p:menuitem value="Administracion de Horas" url="/faces/horas/administrar.xhtml"></p:menuitem> 
                         <p:menuitem value="Actualizacion de Horas" url="#"></p:menuitem>
                     </p:breadCrumb>
