--- a/ProyectoGrado/web/clases/administrar.xhtml
+++ b/ProyectoGrado/web/clases/administrar.xhtml
@@ -11,7 +11,7 @@
                 <p:panel>
                     <p:breadCrumb>
                         <p:menuitem url="#"></p:menuitem>
-                        <p:menuitem value="Bienvenido #{loginController.usuario}" url="/faces/index_docentes.xhtml"></p:menuitem> 
+                        <p:menuitem value="Bienvenido #{loginController.buscarDocente()}" url="/faces/index_docentes.xhtml"></p:menuitem> 
                         <p:menuitem value="Administracion de Clases" url="#"></p:menuitem> 
                     </p:breadCrumb>
                     <br/>
