--- a/ProyectoGrado/web/productos/crear.xhtml
+++ b/ProyectoGrado/web/productos/crear.xhtml
@@ -33,7 +33,7 @@
                     
                     <p:outputLabel value="Actividad:  " for="codact" />
                     <p:selectOneMenu id="codact" required="true" requiredMessage="No ha seleccionado" converter="actividadesConverter" value="#{productosController.campo.codactividad}"> 
-                        <f:selectItems value="#{actividadesController.combo('Selecione un opcion')}" />
+                        <f:selectItems value="#{actividadesController.comboFiltrado('Selecione un opcion')}" />
                     </p:selectOneMenu>
                     
                     <f:facet name="footer">
