--- a/ProyectoGrado/web/docentes/crear.xhtml
+++ b/ProyectoGrado/web/docentes/crear.xhtml
@@ -13,7 +13,7 @@
                     <p:breadCrumb>
                         <p:menuitem url="#"></p:menuitem>
                         <p:menuitem value="Bienvenido #{loginController.usuario}" url="/faces/index_admin.xhtml"></p:menuitem>
-                        <p:menuitem value="Creacion de " url="#"></p:menuitem>
+                        <p:menuitem value="Creacion de Docentes" url="#"></p:menuitem>
                     </p:breadCrumb>
                 </p:panel>  
                 <p:growl id="mensajes" sticky="true" showDetail="true"/>                
