--- a/ProyectoGrado/web/evaluaciones/administrar.xhtml
+++ b/ProyectoGrado/web/evaluaciones/administrar.xhtml
@@ -12,7 +12,7 @@
                     <p:breadCrumb> 
                         <p:menuitem url="#"></p:menuitem>
                         <p:menuitem value="Bienvenido #{loginController.usuario}" url="/faces/index_evaluador.xhtml"></p:menuitem> 
-                        <p:menuitem value="Administracion de Evaluaciones" url="#"></p:menuitem>                       
+                        <p:menuitem value="Calificaciones Realizadas" url="#"></p:menuitem>                       
                     </p:breadCrumb>
                     <br/>
                     <p:dataTable value="#{evaluacionesController.listado}" var="registro">
