--- a/ProyectoGrado/web/convenciones/crear.xhtml
+++ b/ProyectoGrado/web/convenciones/crear.xhtml
@@ -23,10 +23,10 @@
                     <p:inputText id="nombre" required="true" value="#{convencionesController.campo.nombre}"/> 
                     
                     <p:outputLabel value="Color  " for="color" />
-                    <p:inputText id="color" required="true" value="#{convencionesController.campo.color}"/> 
+                    <p:colorPicker id="color" value="#{convencionesController.campo.color}" /> 
                     
                     <f:facet name="footer">
-                        <p:commandButton id="btngrabar" value="Guardar" ajax="false" action="#{convencionesController.agregar()}"/>
+                        <p:commandButton id="btngrabar" value="Guardar" ajax="false" action="#{convencionesController.agregar()}" oncomplete="PF('dlg').show();" update="grid"/>
                     </f:facet>
                 </p:panelGrid>
             </h:form>
