--- a/ProyectoGrado/web/plantilla.xhtml
+++ b/ProyectoGrado/web/plantilla.xhtml
@@ -8,14 +8,11 @@
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
         <h:outputStylesheet name="./css/default.css"/>
         <h:outputStylesheet name="./css/cssLayout.css"/>
-        <title>Facelets Template</title>
+        <title>Formato RDC-54</title>
     </h:head>
 
     <h:body>
 
-        <div id="top" class="top">
-            <ui:insert name="top">Top</ui:insert>
-        </div>
 
         <div id="content" class="center_content">
             <ui:insert name="content">Content</ui:insert>
