--- a/ProyectoGrado/web/clases/administrar.xhtml
+++ b/ProyectoGrado/web/clases/administrar.xhtml
@@ -22,7 +22,8 @@
                         </p:column>
                         <p:column style="width: 10px; text-align: center">
                             <f:facet name="header">Dia</f:facet>
-                            #{registro.dia}
+                            #{registro.codclase}
+                            
                         </p:column> 
                         
                         <p:column style="width: 10px; text-align: center">
