Ya guarda y oculta el dialogo, falta que muestre el mensaje

--- a/ProyectoGrado/web/productos/crear.xhtml
+++ b/ProyectoGrado/web/productos/crear.xhtml
@@ -28,7 +28,7 @@
                     </p:selectOneMenu>
 
                     <f:facet name="footer">
-                        <p:commandButton id="btngrabar" value="Guardar" ajax="false" action="#{productosController.agregar()}"/>
+                        <p:commandButton id="btngrabar" value="Guardar" ajax="true" action="#{productosController.agregar()}"/>
                     </f:facet>                    
                 </p:panelGrid>
             </h:form>
