modificado vista de docnetes funciona borrar y crear falta actualizar

--- a/ProyectoGrado/web/actividades/crear.xhtml
+++ b/ProyectoGrado/web/actividades/crear.xhtml
@@ -41,7 +41,7 @@
                         </p:selectOneMenu>
 
                         <f:facet name="footer">
-                            <p:commandButton id="btngrabar" value="Guardar" ajax="false" action="#{actividadesController.agregar()}"/>
+                            <p:commandButton id="btngrabar" value="Guardar" ajax="true" action="#{actividadesController.agregar()}"/>
                         </f:facet>
                     </p:panelGrid>
                 </p:panel> 
