--- a/ProyectoGrado/web/clases/crear.xhtml
+++ b/ProyectoGrado/web/clases/crear.xhtml
@@ -50,7 +50,7 @@
                         </p:selectOneMenu>
 
                         <f:facet name="footer">
-                            <p:commandButton id="btngrabar" value="Guardar" ajax="false" action="#{clasesController.agregar()}"/>
+                            <p:commandButton id="btngrabar" value="Guardar" ajax="true" action="#{clasesController.agregar()}"/>
                         </f:facet>
                     </p:panelGrid>
                 </p:panel>
